Move padding to choices child div to fix spacing on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,8 @@ section {
         width: 100%;
     }
 
-    #choices {
+    #choices > div {
+        font-weight: 700;
         padding: 1em 0 1em 0;
     }
 
